--- a/src/Common/Header/header.css
+++ b/src/Common/Header/header.css
@@ -13,8 +13,7 @@
   color: var(--Main-Color);
   letter-spacing: 1px;
 }
-.header .logo {
-}
+
 .Box-Lang {
   width: 35px;
   height: 35px;
@@ -29,16 +28,17 @@
 .header .nav-links {
   display: flex;
   align-content: center;
-  column-gap: 20px;
+  column-gap: 1rem;
 }
 
 .header .nav-links .nav-link {
   margin-right: 8px;
   position: relative;
   display: block;
+  color: var(--Main-Color);
 }
 .header .nav-links .nav-link:hover {
-  color: var(--active-color);
+  color: var(--Bg-Active);
   transition: 0.4s all ease;
   -moz-transition: 0.4s all ease;
   -ms-transition: 0.4s all ease;
@@ -54,13 +54,13 @@
 }
 
 .header .nav-links .nav-link.active {
-  color: var(--active-color);
+  color: var(--Bg-Active);
   font-weight: 600;
-  transition: var(--transition);
-  -moz-transition: var(--transition);
-  -ms-transition: var(--transition);
-  -webkit-transition: var(--transition);
-  -o-transition: var(--transition);
+  transition: 0.4s;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  -o-transition: 0.4s;
 }
 
 .header .nav-links .nav-link.active::before {
@@ -79,7 +79,7 @@
   border-radius: 50%;
   left: 50%;
   transform: translateX(-50%);
-  background-color: var(--active-color);
+  background-color: var(--Main-Color);
   opacity: 0;
 }
 .nav-links .nav-link::before {
@@ -90,7 +90,7 @@
   height: 7px;
   border-radius: 50%;
   left: -15px;
-  background-color: var(--active-color);
+  background-color: var(--Main-Color);
 }
 .header .icon-links {
   display: flex;
@@ -98,12 +98,12 @@
   align-items: center;
 }
 .header .icon-links > a {
-  color: var(--active-color);
-  border: 1px solid var(--active-color);
+  color: var(--Bg-Active);
+  border: 1px solid var(--Main-Color);
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: var(--light-color);
+  background-color: var(--Main-Color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -113,7 +113,7 @@
   position: absolute;
   top: -20px;
   right: -10px;
-  background-color: var(--second-color);
+  background-color: var(--Main-Color);
   width: 20px;
   height: 20px;
   color: var(--light-color);
@@ -134,10 +134,14 @@
   height: 2px;
   left: 0;
   position: absolute;
-  background-color: var(--dark-colour);
+  background-color: var(--Main-Color);
   width: 100%;
-  transition: var(--transition);
+  transition: 0.4s;
   border-radius: 2px;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  -o-transition: 0.4s;
 }
 
 .header .menu-icon span:first-child {
@@ -178,13 +182,20 @@
     position: absolute;
     top: 73px;
     flex-direction: column;
-    background-color: #c0cce5;
+    background-color: var(--Main-Color);
     display: flex;
     width: 100%;
     left: 0;
     transition: all 0.5s ease;
     opacity: 0;
     height: 0;
+  }
+
+  .header .nav-links .nav-link::after {
+    background-color: var(--Bg-Active);
+  }
+  .nav-links .nav-link::before {
+    background-color: var(--Bg-Active);
   }
   .nav-links .nav-link {
     left: 50%;
@@ -193,6 +204,7 @@
     opacity: 0;
     transform: translateX(-50%);
     display: none !important;
+    color: var(--Bg-Active) !important;
   }
   .nav-links.show {
     opacity: 1;
