--- a/src/Common/Header/header.css
+++ b/src/Common/Header/header.css
@@ -1,4 +1,4 @@
-.header {
+.Header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -25,19 +25,19 @@
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
-.header .nav-links {
+.Header .Nav-Links {
   display: flex;
   align-content: center;
   column-gap: 1rem;
 }
 
-.header .nav-links .nav-link {
+.Header .Nav-Links .nav-link {
   margin-right: 8px;
   position: relative;
   display: block;
   color: var(--Main-Color);
 }
-.header .nav-links .nav-link:hover {
+.Header .Nav-Links .nav-link:hover {
   color: var(--Bg-Active);
   transition: 0.4s all ease;
   -moz-transition: 0.4s all ease;
@@ -45,15 +45,15 @@
   -webkit-transition: 0.4s all ease;
   -o-transition: 0.4s all ease;
 }
-.header .nav-links .nav-link:hover::before {
+.Header .Nav-Links .nav-link:hover::before {
   opacity: 0;
 }
 
-.header .nav-links .nav-link:hover::after {
+.Header .Nav-Links .nav-link:hover::after {
   opacity: 1;
 }
 
-.header .nav-links .nav-link.active {
+.Header .Nav-Links .nav-link.active {
   color: var(--Bg-Active);
   font-weight: 600;
   transition: 0.4s;
@@ -63,14 +63,14 @@
   -o-transition: 0.4s;
 }
 
-.header .nav-links .nav-link.active::before {
+.Header .Nav-Links .nav-link.active::before {
   opacity: 0;
 }
 
-.header .nav-links .nav-link.active::after {
+.Header .Nav-Links .nav-link.active::after {
   opacity: 1;
 }
-.header .nav-links .nav-link::after {
+.Header .Nav-Links .nav-link::after {
   content: "";
   position: absolute;
   bottom: -10px;
@@ -82,7 +82,7 @@
   background-color: var(--Main-Color);
   opacity: 0;
 }
-.nav-links .nav-link::before {
+.Nav-Links .nav-link::before {
   content: "";
   position: absolute;
   top: 35%;
@@ -92,12 +92,12 @@
   left: -15px;
   background-color: var(--Main-Color);
 }
-.header .icon-links {
+.Header .Icon-Links {
   display: flex;
   column-gap: 10px;
   align-items: center;
 }
-.header .icon-links > a {
+.Header .Icon-Links > a {
   color: var(--Bg-Active);
   border: 1px solid var(--Main-Color);
   width: 40px;
@@ -109,7 +109,7 @@
   align-items: center;
 }
 
-.header .icon-number {
+.Header .icon-number {
   position: absolute;
   top: -20px;
   right: -10px;
@@ -123,14 +123,14 @@
   border-radius: 50%;
   font-size: 13px;
 }
-.header .menu-icon {
+.Header .Menu-Icon {
   width: 34px;
   height: 20px;
   position: relative;
   cursor: pointer;
   display: none;
 }
-.header .menu-icon span {
+.Header .Menu-Icon span {
   height: 2px;
   left: 0;
   position: absolute;
@@ -144,41 +144,41 @@
   -o-transition: 0.4s;
 }
 
-.header .menu-icon span:first-child {
+.Header .Menu-Icon span:first-child {
   top: 0;
 }
 
-.header .menu-icon span:nth-child(2) {
+.Header .Menu-Icon span:nth-child(2) {
   top: 12px;
 }
 
-.header .menu-icon span:last-child {
+.Header .Menu-Icon span:last-child {
   top: 22px;
 }
-.header .menu-icon span:first-child.active-menu {
+.Header .Menu-Icon span:first-child.Active-Menu {
   transform: rotate(45deg);
 }
-.header .menu-icon span:nth-child(2).active-menu {
+.Header .Menu-Icon span:nth-child(2).Active-Menu {
   opacity: 0;
 }
 
-.header .menu-icon span:first-child.active-menu,
-.header .menu-icon span:last-child.active-menu {
+.Header .Menu-Icon span:first-child.Active-Menu,
+.Header .Menu-Icon span:last-child.Active-Menu {
   top: 12px;
 }
 
-.header .menu-icon span:last-child.active-menu {
+.Header .Menu-Icon span:last-child.Active-Menu {
   transform: rotate(-45deg);
 }
 
 @media (max-width: 768px) {
-  .header {
+  .Header {
     padding: 25px 30px;
   }
-  .header .menu-icon {
+  .Header .Menu-Icon {
     display: block;
   }
-  .nav-links {
+  .Nav-Links {
     position: absolute;
     top: 73px;
     flex-direction: column;
@@ -191,13 +191,13 @@
     height: 0;
   }
 
-  .header .nav-links .nav-link::after {
+  .Header .Nav-Links .nav-link::after {
     background-color: var(--Bg-Active);
   }
-  .nav-links .nav-link::before {
+  .Nav-Links .nav-link::before {
     background-color: var(--Bg-Active);
   }
-  .nav-links .nav-link {
+  .Nav-Links .nav-link {
     left: 50%;
     width: fit-content;
     margin: 30px 0;
@@ -206,11 +206,11 @@
     display: none !important;
     color: var(--Bg-Active) !important;
   }
-  .nav-links.show {
+  .Nav-Links.Show {
     opacity: 1;
-    height: 415px;
+    height: 335px;
   }
-  .nav-links .nav-link.show {
+  .Nav-Links .nav-link.Show {
     opacity: 1;
     display: block !important;
     transition-delay: 1s !important;
@@ -218,26 +218,26 @@
 }
 
 @media (max-width: 576px) {
-  .header {
+  .Header {
     padding: 20px 25px;
   }
-  .header .icon-links {
+  .Header .Icon-Links {
     column-gap: 10px !important;
   }
-  .header .icon-links > a {
+  .Header .Icon-Links > a {
     width: 35px;
     height: 35px;
   }
-  .header .icon-links > a i {
+  .Header .Icon-Links > a i {
     padding: 5px;
   }
-  .header .icon-number {
+  .Header .icon-number {
     top: -15px;
   }
 }
 
 @media (max-width: 300px) {
-  .header {
+  .Header {
     padding: 20px;
   }
   .logo {
@@ -246,11 +246,11 @@
 }
 
 @media (min-width: 991px) {
-  .header .nav-links .nav-link {
+  .Header .Nav-Links .nav-link {
     margin-right: 20px !important;
   }
 
-  .header .icon-links {
+  .Header .Icon-Links {
     gap: 20px !important;
   }
 }
