--- a/src/Components/Home/Landing/landin.css
+++ b/src/Components/Home/Landing/landin.css
@@ -14,22 +14,51 @@
 .Box-Content,
 .Container-Avatar {
   background-color: var(--Main-Color);
-  padding: 0.5rem 1rem;
+
+  padding: 0.3rem 0.5rem;
   margin: 0.6rem 0.6rem 0.5rem;
   border-radius: 0.6rem;
   line-height: 1px;
 }
+@media (max-width: 768px) {
+  .Box-Content {
+    padding: 0.3rem 0.5rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .Box-Content {
+    padding: 0.3rem;
+  }
+}
+
+@media (max-width: 300px) {
+}
+
+@media (min-width: 991px) {
+  .Box-Content {
+    padding: 0.5rem 1rem;
+  }
+}
+
 .Container-Avatar {
   margin: 0.9rem 0;
 }
 
 .Avatar {
-  width: 50px;
-  height: 50px;
+  width: 2rem;
+  height: 2rem;
   border-radius: 50%;
-  background-color: red;
   position: relative;
 }
+
+@media (max-width: 768px) {
+  .Avatar {
+    width: 1.7rem;
+    height: 1.7rem;
+  }
+}
+
 .Avatar:nth-child(1) {
   background-color: yellow;
 }
