--- a/src/Components/Home/OurServices/services.css
+++ b/src/Components/Home/OurServices/services.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   background-color: #8cb6d775;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   z-index: 6;
