--- a/src/index.css
+++ b/src/index.css
@@ -20,11 +20,7 @@
 
 @layer components {
   .Main-Bg {
-    background-image: radial-gradient(
-      circle,
-      rgba(21, 189, 201, 1) 0%,
-      rgba(25, 59, 101, 1) 100%
-    );
+    background-image: radial-gradient(circle, rgba(21, 189, 201, 1) 0%, rgba(25, 59, 101, 1) 100%);
   }
 
   .Main-Btn {
@@ -47,6 +43,13 @@
     -ms-transition: 0.3s transform;
     -o-transition: 0.3s transform;
   }
+
+  @media (max-width: 768px) {
+    .Main-Btn {
+      padding: 0.4rem 0.7rem;
+    }
+  }
+
   .Main-Btn:hover .Icon-Main-Btn {
     transform: translatex(10px);
     transition: 0.4s all;
@@ -105,6 +108,7 @@
   .Bg-Active {
     background-color: var(--Bg-Active);
   }
+
   .Active-Color {
     color: var(--Bg-Active);
   }
