--- a/src/Components/Home/Landing/landin.css
+++ b/src/Components/Home/Landing/landin.css
@@ -88,7 +88,27 @@
 }
 
 @media (max-width: 575px) {
-  .Right-Landing .Box-Two div:nth-child(1) {
-    /* background-color: red; */
+  .Right-Landing {
+    top: 4.5rem;
+  }
+  .Col-1,
+  .Col-2 {
+    width: 100% !important;
+    margin: auto;
+  }
+
+  .Right-Landing .Col-1 .Box-1 {
+    position: relative;
+    height: 180px;
+    top: -74px;
+  }
+  .Right-Landing .Col-1 .Box-2 {
+    top: -66px;
+    position: relative;
+    padding: 0.3rem;
+  }
+  .Right-Landing .Content-Box-1 {
+    margin: 0;
+    padding: 0.3rem;
   }
 }
